# ms-pred-original

./: README.md  environment.yml  environment_cuda12.yml  pyproject.toml  requirements.txt
analysis/: form_pred_eval.py  spec_pred_eval.py
conda-env/: QUICK_REFERENCE.md  activate_unified_env.sh  unified_environment.yml  unified_requirements.txt  环境重建指南.md
configs/iceberg/: dag_gen_predict_train_msg_allev.yaml  dag_gen_predict_train_nist.yaml  dag_gen_predict_train_nist20.yaml  dag_inten_contr_finetune_nist.yaml  dag_inten_train_msg_allev.yaml  dag_inten_train_msg_allev_cosine.yaml  dag_inten_train_msg_allev_entropy.yaml  dag_inten_train_nist.yaml  dag_inten_train_nist20.yaml  dag_train_msg_allev.yaml  dag_train_nist20.yaml
data_scripts/: all_assign_subform.sh  all_create_splits.sh
data_scripts/dag/: add_dag_intens.py  dag_to_subform.py  run_magma.sh
data_scripts/deploy/: broad_candidates_from_ms.py
data_scripts/forms/: 01_assign_subformulae.py  03_add_form_intens.py
data_scripts/pubchem/: 04_make_retrieval_lists.py
launcher_scripts/: run_from_config.py
notebooks/: iceberg_analysis.py  iceberg_broad_elucidation.ipynb  iceberg_david_elucidation.ipynb  iceberg_demo.ipynb  iceberg_elucidation.ipynb  iceberg_erin_elucidation.ipynb  iceberg_fig_cosine_retrieval.ipynb  iceberg_fig_visual_preds.ipynb  iceberg_joules_elucidation.ipynb  iceberg_julian_elucidation.ipynb  iceberg_neu_foodome.ipynb  iceberg_pesticide_elucidation_joules.ipynb  iceberg_withanolide_elucidation.ipynb
notebooks/iceberg_2025_arxiv/: README.md  iceberg_demo_pubchem_elucidation.ipynb  iceberg_fig_qualitative.ipynb  iceberg_fig_quantitative.ipynb  iceberg_fig_visual_msms.ipynb  iceberg_pooled_cn_coupling.ipynb
notebooks/iceberg_elucidation_campaigns/: iceberg_joules_elucidation.ipynb
notebooks/iceberg_preprint_2025/: iceberg_fig_quantitative.ipynb  iceberg_pooled_cn_coupling.ipynb
ref/: iceberg_old.tex
run_scripts/cfm_id/: process_cfm_pred.py
run_scripts/dag_model/: 01_run_dag_gen_train.sh  02_sweep_gen_thresh.py  03_run_dag_gen_predict.sh  03_run_dag_gen_predict_msg.sh  04_train_dag_inten.sh  05_predict_dag_inten.py  06_run_retrieval.py  09_predict_retrieval.py
run_scripts/graff_ms/: 02_predict_graff_ms.py  03_run_retrieval.py
run_scripts/iceberg/: 03_run_dag_gen_predict.sh  03_run_dag_gen_predict_msg.sh  04_train_dag_inten.sh  05_predict_dag_inten.py  06_run_retrieval.py  run_all.sh
run_scripts/massformer_model/: 02_predict_massformer.py  03_run_retrieval.py
src/ms_pred/autoregr_gen/: hyperopt.py  predict.py  train.py
src/ms_pred/common/: __init__.py  chem_utils.py  denoising_utils.py  misc_utils.py  parallel_utils.py  plot_utils.py
src/ms_pred/dag_pred/: dag_data.py  gen_hyperopt.py  gen_model.py  iceberg_elucidation.py  inten_hyperopt.py  inten_model.py  joint_model.py  predict_gen.py  predict_inten.py  predict_smis.py  train_contr_inten.py  train_gen.py  train_inten.py
src/ms_pred/ffn_pred/: ffn_hyperopt.py  predict.py  train.py
src/ms_pred/gnn_pred/: gnn_hyperopt.py  predict.py  train.py
src/ms_pred/graff_ms/: graff_ms_hyperopt.py  predict.py  train.py
src/ms_pred/magma/: fragmentation.py  run_magma.py
src/ms_pred/marason/: train_gen.py  train_inten.py
src/ms_pred/massformer_pred/: massformer_hyperopt.py  predict.py  train.py
src/ms_pred/molnetms/: molnetms_hyperopt.py  predict.py  train.py
src/ms_pred/nn_utils/: base_hyperopt.py  nn_utils.py
(+14 files in other folders)
