[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2", "numpy", "cython"]
build-backed = "setuptools.build_meta"


[project]
name = "ms-gen"
version = "0.1.0"
description = "Spectral elucidation environment"
readme = "README.md"
authors = [
    { name = "Sam Goldman", email = "samlg@.mit.edu"},
    { name = "Runzhong Wang", email = "rwang@.mit.edu"},
    { name = "Mrunali Manjrekar", email = "mrunali@mit.edu" },
]

requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "scikit-learn",
    "pathos",
    "CairoSVG",
    "ipdb",
    "pubchempy",
    "omegaconf",
    "h5py",
    "matplotlib",
    "rdkit",
    "python-graphviz",
    "pygraphviz", 
    "ipykernel",
    "einops", 
    "pytorch-lightning",
    "pygmtools", 
    "ray",
    "dgl @ ", 
    "torch-scatter @ ",
    torch-sparse @ ",    
    "torch==2.4.0+cu121 @ https://download.pytorch.org/whl/cu121",
    "torchaudio==2.4.0+cu121 @ https://download.pytorch.org/whl/cu121", 
    "torchvision==0.19.0+cu121 @ https://download.pytorch.org/whl/cu121",
    "torch-geometric",
    "nb_conda_kernels",
    "seaborn",
    "MKL"
]


[tool.setuptools.packages.find]
where = ["src"]

