[project]
name = "ms-gen"
version = "0.1.0"
description = "A package for computational tandem mass spectrometry simulation."
authors = [
    { name = "Sam Goldman", email = "samlg@.mit.edu"},
    { name = "Runzhong Wang", email = "rwang@.mit.edu"},
    { name = "Mrunali Manjrekar", email = "mrunali@mit.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.4.0",         
    "torchvision==0.19.0",
    "torchaudio==2.4.0",

    "cairosvg>=2.8.2",
    "cython>=3.1.3",
    "dgl",
    "einops>=0.8.1",
    "h5py>=3.14.0",
    "ipdb>=0.13.13",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "msbuddy>=0.3.12",
    "omegaconf>=2.3.0",
    "pathos>=0.3.4",
    "pip>=25.2",
    "pubchempy>=1.0.4",
    "pygmtools @ git+https://github.com/Thinklab-SJTU/pygmtools.git",
    "pytorch-lightning>=2.5.4",
    "ray[tune]>=2.49.1",
    "rdkit>=2025.3.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    # If these URLs break (Python / CUDA / Torch version mismatch), update cp tag & version accordingly.
    "torch-scatter @ https://data.pyg.org/whl/torch-2.4.0%2Bcu121/torch_scatter-2.1.2+pt24cu121-cp310-cp310-linux_x86_64.whl",
    "torch-sparse  @ https://data.pyg.org/whl/torch-2.4.0%2Bcu121/torch_sparse-0.6.18+pt24cu121-cp310-cp310-linux_x86_64.whl",
]

[tool.uv.sources]
pygmtools = { git = "https://github.com/Thinklab-SJTU/pygmtools.git" }
dgl = { url = "https://data.dgl.ai/wheels/torch-2.1/cu121/dgl-2.4.0%2Bcu121-cp310-cp310-manylinux1_x86_64.whl" }

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.4.0+cu121.html", "https://data.pyg.org/whl/torch-2.4.0+cpu.html"]

[tool.setuptools.packages.find]
where = ["src"]

